--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,18 +1,22 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav>
     <mat-nav-list>
-      <a mat-list-item href="https://luixaviles.com" target="_blank">
-        <mat-icon mat-list-icon>person</mat-icon>
-        <span mat-line>Author</span>
-      </a>
-      <a mat-list-item href="https://github.com/luixaviles/socket-io-typescript-chat" target="_blank">
-        <mat-icon mat-list-icon>code</mat-icon>
-        <span mat-line>Source Code</span>
-      </a>
-      <a mat-list-item href="https://medium.com/dailyjs/real-time-apps-with-typescript-integrating-web-sockets-node-angular-e2b57cbd1ec1" target="_blank">
-        <mat-icon mat-list-icon>web</mat-icon>
-        <span mat-line>Blog Post</span>
-      </a>
+        <a mat-list-item (click)="logout()" *ngIf="isLoggedIn()">
+          <mat-icon mat-list-icon>exit_to_app</mat-icon>
+          <span mat-line>Logout</span>
+        </a>
+        <a mat-list-item (click)="login()" *ngIf="!isLoggedIn()">
+          <mat-icon mat-list-icon>exit_to_app</mat-icon>
+          <span mat-line>Login</span>
+        </a>
+        <a mat-list-item href="https://github.com/luixaviles/socket-io-typescript-chat" target="_blank">
+            <mat-icon mat-list-icon>code</mat-icon>
+            <span mat-line>Source Code</span>
+        </a>
+        <a mat-list-item href="https://medium.com/dailyjs/real-time-apps-with-typescript-integrating-web-sockets-node-angular-e2b57cbd1ec1" target="_blank">
+            <mat-icon mat-list-icon>web</mat-icon>
+            <span mat-line>Blog Post</span>
+        </a>
     </mat-nav-list>
   </mat-sidenav>
 
